--- a/solicitar-turno.html
+++ b/solicitar-turno.html
@@ -5,203 +5,179 @@
   <title>Solicitar Turno - C.U.R.A.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
   <script src="https://cdn.tailwindcss.com"></script>
 
   <style>
     :root {
-      --main-bg: #f0f4f8; 
-      --blue-header: #005fa3; 
-      --blue-main: #1f6fe5;
-      --blue-soft: #e3f0ff;
-      --text-dark: #0d2b52;
-      --text-gray: #64748b;
-      --card-white: #ffffff;
-      --border-soft: #e5e7eb;
-      --shadow-soft: 0 4px 12px rgba(0, 0, 0, 0.05);
-    }
-
-    /* --- FIX 1: ESTABILIDAD DE PANTALLA --- */
-    html {
-      overflow-y: scroll; 
-      scrollbar-width: none; 
-    }
-    ::-webkit-scrollbar { display: none; }
-
-    * {
-      box-sizing: border-box;
-      font-family: 'Inter', -apple-system, sans-serif;
-      margin: 0;
-      padding: 0;
+      --bg-dark: #00345C;
+      --cura-blue: #004E85;
+      --accent: #00C2FF;
+      --glass: rgba(255, 255, 255, 0.05);
+      --glass-border: rgba(255, 255, 255, 0.1);
     }
 
     body {
-      background-color: var(--main-bg);
+      background-color: var(--bg-dark);
+      background-image: 
+        radial-gradient(circle at top right, rgba(0, 78, 133, 0.5), transparent),
+        radial-gradient(circle at bottom left, rgba(0, 194, 255, 0.05), transparent);
+      color: white;
+      margin: 0;
       display: flex;
       justify-content: center;
       min-height: 100vh;
+      font-family: 'Inter', sans-serif;
       overflow-x: hidden;
     }
 
     .app-shell {
       width: 100%;
       max-width: 414px;
+      padding: 20px;
+      padding-bottom: 120px;
       display: flex;
       flex-direction: column;
-      padding-bottom: 120px; 
     }
 
-    /* --- HEADER SIMÉTRICO --- */
+    /* --- HEADER --- */
     .header-bar {
-      background-color: var(--blue-header);
-      width: calc(100% - 40px);
-      margin: 20px auto 10px; 
-      height: 60px; 
-      border-radius: 999px;
       display: flex;
-      align-items: center;
-      padding: 0 16px;
-      box-shadow: 0 8px 20px rgba(0, 95, 163, 0.2);
       justify-content: space-between;
-      z-index: 100;
+      align-items: center;
+      padding: 10px 5px;
+      margin-bottom: 25px;
     }
-
     .back-btn {
-      width: 36px; height: 36px; border-radius: 50%; background: rgba(255,255,255,0.2);
-      display: flex; align-items: center; justify-content: center; color: #fff; 
-      font-size: 22px; border: none; cursor: pointer; text-decoration: none;
+      width: 40px; height: 40px; border-radius: 12px; background: var(--glass);
+      border: 1px solid var(--glass-border); display: flex; align-items: center;
+      justify-content: center; color: #fff; font-size: 20px; cursor: pointer;
     }
-    .header-title { color: #ffffff; font-size: 18px; font-weight: 700; }
-    .header-spacer { width: 36px; height: 36px; }
 
-    /* --- CONTENIDO --- */
-    .main-content { padding: 10px 20px; flex: 1; }
-
-    .card {
-      background: var(--card-white);
-      border-radius: 28px;
+    /* --- FORM CARD --- */
+    .form-card {
+      background: var(--glass);
+      backdrop-filter: blur(10px);
+      border: 1px solid var(--glass-border);
+      border-radius: 32px;
       padding: 24px;
-      box-shadow: var(--shadow-soft);
       margin-bottom: 20px;
+      box-shadow: 0 25px 50px rgba(0,0,0,0.3);
     }
 
     .section-label {
-      font-size: 15px;
-      font-weight: 700;
-      color: var(--text-dark);
+      font-size: 13px;
+      font-weight: 800;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      color: var(--accent);
       margin-bottom: 8px;
       display: block;
     }
 
-    /* --- FORM ELEMENTS --- */
-    .input-group { margin-bottom: 20px; }
-
     .input-text, .select-field {
       width: 100%;
-      padding: 14px;
-      border-radius: 16px;
-      border: 1px solid var(--border-soft);
+      padding: 14px 18px;
+      border-radius: 18px;
+      border: 1px solid var(--glass-border);
+      background: rgba(255, 255, 255, 0.05);
+      color: white;
       font-size: 15px;
       outline: none;
-      background: #f8fafc;
-      color: var(--text-dark);
-      transition: border-color 0.2s;
+      transition: all 0.3s;
     }
-
     .input-text:focus, .select-field:focus {
-      border-color: var(--blue-main);
-      background: #fff;
+      border-color: var(--accent);
+      background: rgba(255, 255, 255, 0.1);
     }
+    select option { background: var(--bg-dark); color: white; }
 
-    .pill-group { display: flex; flex-wrap: wrap; gap: 8px; margin-top: 4px; }
+    /* --- PILLS --- */
     .pill {
-      padding: 10px 16px; border-radius: 14px; border: 1px solid var(--border-soft);
-      background: #f1f5f9; font-size: 13px; font-weight: 600; color: var(--text-gray);
-      cursor: pointer; transition: all 0.2s;
+      padding: 10px 16px; border-radius: 14px; border: 1px solid var(--glass-border);
+      background: rgba(255,255,255,0.05); font-size: 12px; font-weight: 700; color: white;
+      cursor: pointer; transition: 0.2s;
     }
-    .pill.active { background: var(--blue-main); color: #fff; border-color: var(--blue-main); }
+    .pill.active { background: var(--accent); color: var(--bg-dark); border-color: var(--accent); }
 
-    .option-row { display: flex; align-items: center; gap: 10px; margin-bottom: 12px; font-size: 14px; color: var(--text-dark); }
-    .option-row input[type="radio"] { width: 20px; height: 20px; accent-color: var(--blue-main); }
-
+    /* --- INFO BOX --- */
     .info-box {
-      background: #f0f7ff; border-radius: 16px; padding: 12px 16px;
-      display: flex; gap: 12px; align-items: center; margin-top: 10px; border: 1px solid #dbeafe;
+      background: rgba(0, 194, 255, 0.1); border-radius: 18px; padding: 14px;
+      display: flex; gap: 12px; align-items: center; margin-top: 12px; border: 1px solid rgba(0, 194, 255, 0.2);
     }
     .info-icon {
-      width: 24px; height: 24px; background: var(--blue-main); color: #fff;
+      width: 22px; height: 22px; background: var(--accent); color: var(--bg-dark);
       border-radius: 50%; display: flex; align-items: center; justify-content: center;
-      font-size: 12px; font-weight: bold; flex-shrink: 0;
+      font-size: 12px; font-weight: 900; flex-shrink: 0;
     }
-    .info-text { font-size: 12px; color: var(--blue-header); line-height: 1.4; }
+    .info-text { font-size: 12px; color: var(--accent); line-height: 1.4; font-weight: 500; }
 
-    .chip {
-      display: inline-block; padding: 4px 10px; border-radius: 8px;
-      background: #dcfce7; color: #166534; font-size: 11px; font-weight: 700; margin-top: 6px;
+    .chip-suggestion {
+      display: inline-block; padding: 5px 12px; border-radius: 10px;
+      background: rgba(34, 197, 94, 0.2); color: #4ade80; font-size: 11px; font-weight: 800; margin-top: 10px;
     }
+
+    /* --- RADIOS --- */
+    .option-row { display: flex; align-items: center; gap: 12px; margin-bottom: 12px; font-size: 15px; cursor: pointer; }
+    .option-row input[type="radio"] { width: 22px; height: 22px; accent-color: var(--accent); cursor: pointer; }
 
     .btn-submit {
-      width: 100%; padding: 18px; border-radius: 20px; border: none;
-      background: var(--blue-main); color: #fff; font-size: 16px; font-weight: 700;
-      cursor: pointer; box-shadow: 0 10px 20px rgba(31, 111, 229, 0.2); margin-top: 10px;
+      width: 100%; padding: 18px; border-radius: 22px; border: none;
+      background: var(--accent); color: var(--bg-dark); font-size: 16px; font-weight: 800;
+      cursor: pointer; box-shadow: 0 10px 25px rgba(0, 194, 255, 0.3); margin-top: 15px;
+      transition: transform 0.2s;
+    }
+    .btn-submit:active { transform: scale(0.97); }
+
+    /* --- BOTTOM BAR --- */
+    .bottom-bar {
+      position: fixed; bottom: 25px; left: 50%; transform: translateX(-50%);
+      width: 85%; max-width: 350px;
+      background: rgba(6, 93, 155, 0.7);
+      backdrop-filter: blur(20px); border-radius: 30px; height: 70px;
+      display: flex; align-items: center; justify-content: space-around;
+      border: 1px solid var(--glass-border); z-index: 1000;
+    }
+    .nav-btn { color: rgba(255,255,255,0.4); font-size: 24px; background: none; border: none; cursor: pointer; }
+    .nav-btn.active { color: var(--accent); }
+    .center-btn { 
+      width: 60px; height: 60px; background: var(--accent); color: var(--bg-dark);
+      border-radius: 50%; display: flex; align-items: center; justify-content: center;
+      font-size: 28px; font-weight: bold; margin-top: -40px; box-shadow: 0 8px 20px rgba(0, 194, 255, 0.4);
     }
 
-    /* --- MODAL AYUDA (Premium) --- */
+    /* MODAL */
     .modal-backdrop {
-      position: fixed; inset: 0; background: rgba(13, 43, 82, 0.4); backdrop-filter: blur(10px);
+      position: fixed; inset: 0; background: rgba(0, 52, 92, 0.4); backdrop-filter: blur(10px);
       display: none; justify-content: center; align-items: center; padding: 20px; z-index: 2000;
     }
     .modal {
-      background: #fff; width: 100%; max-width: 360px; border-radius: 35px;
-      padding: 28px; box-shadow: 0 20px 50px rgba(0,0,0,0.2);
-      position: relative; display: flex; flex-direction: column;
+      background: #ffffff; width: 100%; max-width: 360px; border-radius: 35px;
+      padding: 28px; box-shadow: 0 20px 50px rgba(0,0,0,0.3); color: #0d2b52;
     }
-    .modal-top { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
-    .modal-title { font-size: 19px; font-weight: 800; color: var(--text-dark); }
-    .x-close-btn { background: #f1f5f9; border: none; width: 36px; height: 36px; border-radius: 50%; display: flex; align-items: center; justify-content: center; color: var(--text-dark); cursor: pointer; }
-    .modal-body { font-size: 14px; color: var(--text-gray); line-height: 1.6; margin-bottom: 20px; }
-    .help-item { margin-bottom: 14px; display: flex; gap: 12px; }
-    .help-icon { color: var(--blue-main); font-size: 22px; }
-    .modal-footer { display: flex; justify-content: flex-start; border-top: 1px solid #f1f5f9; padding-top: 15px; }
-    .modal-back-btn { background: none; border: none; color: var(--blue-main); font-weight: 700; display: flex; align-items: center; gap: 6px; cursor: pointer; font-size: 15px; }
-
-    /* --- BARRA INFERIOR --- */
-    .bottom-bar {
-      position: fixed; bottom: 24px; left: 50%; transform: translateX(-50%); width: 90%;
-      max-width: 360px; background: #ffffff; border-radius: 35px; height: 70px;
-      display: flex; align-items: center; justify-content: space-between; padding: 0 25px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1); z-index: 1000;
-    }
-    .nav-icon-btn { background: none; border: none; padding: 10px; cursor: pointer; color: var(--text-gray); transition: all 0.2s; }
-    .nav-icon-btn.active { color: var(--blue-main); }
-    .nav-icon-btn i { font-size: 26px; }
-    .center-question-btn { width: 64px; height: 64px; background: var(--blue-main); border-radius: 50%; border: 5px solid var(--main-bg); display: flex; align-items: center; justify-content: center; color: white; font-size: 32px; font-weight: 600; margin-top: -35px; box-shadow: 0 8px 20px rgba(31, 111, 229, 0.3); cursor: pointer; }
-    .nav-icon-btn:active, .center-question-btn:active { transform: scale(0.9); }
   </style>
 </head>
 <body>
 
   <div class="app-shell">
     <header class="header-bar">
-      <button class="back-btn" onclick="history.back()"><i class="ph ph-caret-left"></i></button>
-      <div class="header-title">Solicitar Turno</div>
-      <div class="header-spacer"></div>
+      <button class="back-btn" onclick="history.back()"><i class="ph-bold ph-caret-left"></i></button>
+      <div class="text-lg font-extrabold">Solicitar Turno</div>
+      <div style="width:40px"></div>
     </header>
 
-    <main class="main-content">
-      <div class="card">
-        <div class="input-group">
+    <main>
+      <div class="form-card">
+        <div class="mb-5">
           <label class="section-label">Establecimiento</label>
           <input type="text" class="input-text" placeholder="Buscar centro de salud o cercanía...">
-          <div class="pill-group" style="margin-top:10px;">
-            <button class="pill active">Usar ubicación actual</button>
+          <div class="flex gap-2 mt-3">
+            <button class="pill active"><i class="ph-bold ph-map-pin"></i> Ubicación actual</button>
           </div>
         </div>
 
-        <div class="input-group">
+        <div class="mb-5">
           <label class="section-label">Especialidad</label>
           <select class="select-field" id="especialidad">
             <option value="">Seleccionar especialidad</option>
@@ -214,10 +190,10 @@
           </select>
         </div>
 
-        <div class="input-group">
+        <div class="mb-5">
           <label class="section-label">Motivo de la consulta</label>
           <input type="text" id="motivo" class="input-text" placeholder="Ej: Control, dolor de pecho, receta...">
-          <div id="chip-sugerencia" class="chip" style="display:none;"></div>
+          <div id="chip-sugerencia" class="chip-suggestion" style="display:none;"></div>
           
           <div class="info-box" id="info-docs">
             <div class="info-icon">i</div>
@@ -225,12 +201,12 @@
           </div>
         </div>
 
-        <div style="display:flex; gap:12px; margin-bottom:20px;">
-          <div style="flex:1;">
+        <div class="flex gap-3 mb-5">
+          <div class="flex-1">
             <label class="section-label">Fecha</label>
             <input type="date" class="input-text">
           </div>
-          <div style="flex:1;">
+          <div class="flex-1">
             <label class="section-label">Franja</label>
             <select class="select-field">
               <option>Mañana</option>
@@ -240,17 +216,19 @@
           </div>
         </div>
 
-        <div class="input-group">
+        <div class="mb-5">
           <label class="section-label">Modalidad</label>
-          <div class="option-row">
-            <input type="radio" name="mod" id="pres" checked> <label for="pres">Presencial</label>
-          </div>
-          <div class="option-row">
-            <input type="radio" name="mod" id="tele"> <label for="tele">Telemedicina (Salud Digital)</label>
+          <div class="space-y-2">
+            <label class="option-row">
+                <input type="radio" name="mod" id="pres" checked> <span>Presencial</span>
+            </label>
+            <label class="option-row">
+                <input type="radio" name="mod" id="tele"> <span>Telemedicina (Salud Digital)</span>
+            </label>
           </div>
         </div>
 
-        <div class="input-group">
+        <div class="mb-6">
           <label class="section-label">Obra Social / Cobertura</label>
           <select class="select-field">
             <option>PAMI</option>
@@ -266,23 +244,26 @@
     </main>
 
     <nav class="bottom-bar">
-      <button class="nav-icon-btn" onclick="location.href='menu.html'"><i class="ph-bold ph-house"></i></button>
-      <button class="nav-icon-btn active" onclick="location.href='turnos.html'"><i class="ph-bold ph-calendar-blank"></i></button>
-      <div class="center-question-btn" onclick="abrirModalAyuda()">?</div>
-      <button class="nav-icon-btn" onclick="location.href='farmacias.html'"><i class="ph-bold ph-prescription"></i></button>
-      <button class="nav-icon-btn" onclick="location.href='perfil.html'"><i class="ph-bold ph-user"></i></button>
+      <button class="nav-btn" onclick="location.href='menu.html'"><i class="ph-bold ph-house-line"></i></button>
+      <button class="nav-btn active" onclick="location.href='solicitar-turno.html'"><i class="ph-bold ph-calendar-blank"></i></button>
+      <div class="center-btn" onclick="abrirModalAyuda()">?</div>
+      <button class="nav-btn" onclick="location.href='farmacias.html'"><i class="ph-bold ph-pill"></i></button>
+      <button class="nav-btn" onclick="location.href='perfil.html'"><i class="ph-bold ph-user-circle"></i></button>
     </nav>
   </div>
 
   <div id="modal-container" class="modal-backdrop" onclick="cerrarModal()">
     <div class="modal" onclick="event.stopPropagation()">
-      <div class="modal-top">
-        <h3 id="modal-title" class="modal-title">Ayuda</h3>
-        <button class="x-close-btn" onclick="cerrarModal()"><i class="ph ph-x"></i></button>
+      <div class="flex justify-between items-center mb-6">
+        <h3 class="text-xl font-extrabold">Ayuda: Turnos</h3>
+        <button onclick="cerrarModal()" class="bg-gray-100 p-2 rounded-full"><i class="ph ph-x"></i></button>
       </div>
-      <div id="modal-body" class="modal-body"></div>
-      <div class="modal-footer">
-        <button class="modal-back-btn" onclick="cerrarModal()"><i class="ph ph-arrow-left"></i> Volver</button>
+      <div id="modal-body" class="space-y-5 text-sm text-gray-600">
+        </div>
+      <div class="mt-8 pt-5 border-t border-gray-100">
+        <button onclick="cerrarModal()" class="flex items-center gap-2 text-cura-blue font-bold text-lg">
+          <i class="ph-bold ph-arrow-left"></i> Volver
+        </button>
       </div>
     </div>
   </div>
@@ -293,23 +274,20 @@
     const docText = document.getElementById("doc-text");
     const especialidadSelect = document.getElementById("especialidad");
 
-    // LÓGICA DE AYUDA CONTEXTUAL
     function abrirModalAyuda() {
       const modal = document.getElementById('modal-container');
-      const title = document.getElementById('modal-title');
       const body = document.getElementById('modal-body');
-      title.innerText = "Ayuda: Turnos";
       body.innerHTML = `
-        <div class="help-item">
-          <i class="ph ph-brain help-icon"></i>
+        <div class="flex gap-4">
+          <i class="ph-bold ph-brain text-2xl text-blue-600"></i>
           <p><strong>Asignación Inteligente:</strong> Si describes tu síntoma, el sistema te sugerirá la especialidad correcta automáticamente.</p>
         </div>
-        <div class="help-item">
-          <i class="ph ph-video help-icon"></i>
+        <div class="flex gap-4">
+          <i class="ph-bold ph-video text-2xl text-blue-600"></i>
           <p><strong>Telemedicina:</strong> Algunos motivos permiten atención por videollamada para evitar traslados innecesarios.</p>
         </div>
-        <div class="help-item">
-          <i class="ph ph-warning help-icon"></i>
+        <div class="flex gap-4">
+          <i class="ph-bold ph-warning text-2xl text-red-600"></i>
           <p><strong>Urgencias:</strong> Si tu cuadro es grave, no solicites turno aquí; dirígete de inmediato a la guardia más cercana.</p>
         </div>
       `;
@@ -318,10 +296,8 @@
 
     function cerrarModal() { document.getElementById('modal-container').style.display = "none"; }
 
-    // LÓGICA DE SUGERENCIAS EN TIEMPO REAL
     motivoInput.addEventListener("input", () => {
       const val = motivoInput.value.toLowerCase();
-      
       if (val.includes("pecho") || val.includes("corazon")) {
         especialidadSelect.value = "cardiologia";
         chipSugerencia.textContent = "Sugerencia: Cardiología";
